Fixed issue with item being cut off on iphone

--- a/less/gmcq.less
+++ b/less/gmcq.less
@@ -162,6 +162,7 @@
 
     .gmcq-item-checkbox {
         position: relative;
+        height: 60px;
     }
 
     .gmcq-item-state {
